--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -5,32 +5,72 @@
 }
 
 .secondary {
+  width: 132px;
+  height: 30px;
+  background: white;
+  border-radius: 3px;
 }
 
 .default {
+  width: 132px;
+  height: 30px;
+  background: #0066cc;
+  border-radius: 3px;
 }
 
 .red {
+  width: 132px;
+  height: 30px;
+  background: #cc1439;
+  border-radius: 3px;
 }
 
 .default:hover {
+  width: 167px;
+  height: 30px;
+  background: #0080ff;
+  border-radius: 3px;
 }
 
 .red:hover {
+  width: 167px;
+  height: 30px;
+  background: #ff1a47;
+  border-radius: 3px;
 }
 
 .secondary:hover {
+  width: 167px;
+  height: 30px;
+  background: #e5f0fa;
+  border: 1px solid #0066cc;
+  border-radius: 3px;
 }
 
-
 .default:active {
+  width: 149px;
+  height: 30px;
+  background: #0059b3;
+  border-radius: 3px;
 }
 
 .secondary:active {
+  width: 149px;
+  height: 30px;
+  background: #c9e5ff;
+  border: 1px solid #0066cc;
+  border-radius: 3px;
 }
 
 .red:active {
+  width: 149px;
+  height: 30px;
+  background: #b31232;
+  border-radius: 3px;
 }
 
 .button:disabled {
+  background: #004d99;
+  opacity: 0.5;
+  border-radius: 3px;
 }
